// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Conversations Component Conversations component work 1`] = `
<ul
  class="ant-conversations"
>
  <li
    class="ant-conversations-item"
  >
    <div
      class="ant-conversations-icon"
    >
      <div
        id="conversation-test-id"
      >
        icon
      </div>
    </div>
    <span
      aria-label="What is Ant Design X ?"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      What is Ant Design X ?
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      <div>
        Getting Started:
        <a
          href="https://ant-design.antgroup.com/index-cn"
          rel="noreferrer"
          target="_blank"
        >
          Ant Design !
        </a>
      </div>
    </span>
  </li>
  <li
    class="ant-conversations-item"
  >
    <span
      aria-label="In Docker, use 🐑 Ollama and initialize"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      In Docker, use 🐑 Ollama and initialize
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      aria-label="Expired, please go to the recycle bin to check"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      Expired, please go to the recycle bin to check
    </span>
  </li>
  <li
    class="ant-conversations-item ant-conversations-item-disabled"
  >
    <span
      aria-label="No key"
      class="ant-typography ant-typography-ellipsis ant-conversations-label"
    >
      No key
    </span>
  </li>
</ul>
`;

exports[`Conversations Component rtl render component should be rendered correctly in RTL direction 1`] = `
<ul
  class="ant-conversations css-var-r1 ant-conversations-rtl"
>
  <li>
    <div
      class="ant-divider css-var-r1 ant-divider-horizontal ant-divider-with-text ant-divider-with-text-right ant-divider-plain ant-divider-rtl"
      role="separator"
    >
      <span
        class="ant-divider-inner-text"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-secondary css-var-r1"
        >
          pinned
        </span>
      </span>
    </div>
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <div
          class="ant-conversations-icon"
        >
          <div
            id="conversation-test-id"
          >
            icon
          </div>
        </div>
        <span
          aria-label="What is Ant Design X ?"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-conversations-label css-var-r1"
        >
          What is Ant Design X ?
        </span>
        <span
          aria-label="more"
          class="anticon anticon-more ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="more"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
    </ul>
  </li>
  <li>
    <div
      class="ant-divider css-var-r1 ant-divider-horizontal ant-divider-plain ant-divider-rtl"
      role="separator"
    />
    <ul
      class="ant-conversations-list"
    >
      <li
        class="ant-conversations-item"
      >
        <span
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-conversations-label css-var-r1"
        >
          <div>
            Getting Started:
            <a
              href="https://ant-design.antgroup.com/index-cn"
              rel="noreferrer"
              target="_blank"
            >
              Ant Design !
            </a>
          </div>
        </span>
        <span
          aria-label="more"
          class="anticon anticon-more ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="more"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
      <li
        class="ant-conversations-item"
      >
        <span
          aria-label="In Docker, use 🐑 Ollama and initialize"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-conversations-label css-var-r1"
        >
          In Docker, use 🐑 Ollama and initialize
        </span>
        <span
          aria-label="more"
          class="anticon anticon-more ant-dropdown-trigger ant-dropdown-rtl ant-conversations-menu-icon"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="more"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M456 231a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0zm0 280a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          aria-label="Expired, please go to the recycle bin to check"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-conversations-label css-var-r1"
        >
          Expired, please go to the recycle bin to check
        </span>
      </li>
      <li
        class="ant-conversations-item ant-conversations-item-disabled"
      >
        <span
          aria-label="No key"
          class="ant-typography ant-typography-rtl ant-typography-ellipsis ant-conversations-label css-var-r1"
        >
          No key
        </span>
      </li>
    </ul>
  </li>
</ul>
`;
